--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/adamrmor">View on GitHub</a>
 
-          <h1 id="project_title">Adamrmor.GitHub.io</h1>
-          <h2 id="project_tagline">Test</h2>
+          <h1 id="project_title">Bored in Browns Bay</h1>
+          <h2 id="project_tagline">Playing with AM Collection Data</h2>
 
         </header>
     </div>
@@ -29,7 +29,6 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<script async src="//jsfiddle.net/adamrmor/o86h4khn/embed/result/"></script>
         <iframe width="100%" height="900" src="//jsfiddle.net/adamrmor/o86h4khn/embedded/result/dark/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 <p>T </section>
     </div>
