--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Auckland Museum Natural Science Collection by the Numbers.</h3>
+        Simple Tree diagram showing the various classifications that make up our Natural Science Collection
         <iframe width="100%" height="900" src="//jsfiddle.net/adamrmor/o86h4khn/embedded/result/dark/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 <p>T </section>
     </div>
