--- a/Digitalnz/search_widget/dnz_search.html
+++ b/Digitalnz/search_widget/dnz_search.html
@@ -20,7 +20,7 @@
           DNZSearch.APIDomain = 'http://api.digitalnz.org/'; 
           DNZSearch.hostedDomain = 'http://www.digitalnz.org/'; 
           // Please add your DigitalNZ API key below in the function parameter DNZSearch.APIKey = 'YOUR_API_KEY'
-          DNZSearch.APIKey = ''; 
+          DNZSearch.APIKey = 'SxHaJQxHoAqss6MzSqQo'; 
           // You can choose a stylesheet from css folder and add to DNZSearch.stylesheet. Default is widget_red.css 
           DNZSearch.stylesheet = 'widget_red.css';
           // The number of results displays in search.
