--- a/Digitalnz/search_widget/dnz_search.html
+++ b/Digitalnz/search_widget/dnz_search.html
@@ -22,7 +22,7 @@
           // Please add your DigitalNZ API key below in the function parameter DNZSearch.APIKey = 'YOUR_API_KEY'
           DNZSearch.APIKey = 'SxHaJQxHoAqss6MzSqQo'; 
           // You can choose a stylesheet from css folder and add to DNZSearch.stylesheet. Default is widget_red.css 
-          DNZSearch.stylesheet = 'widget_red.css';
+          DNZSearch.stylesheet = 'widget_grey.css';
           // The number of results displays in search.
           DNZSearch.numberOfResults = 4; 
         }
