--- a/Hawaii/index.html
+++ b/Hawaii/index.html
@@ -16,54 +16,83 @@
 
   <div class="row">
   <div class="column">
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-101318"><img src="http://api.aucklandmuseum.com/id/media/v/577711?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-29825"><img src="http://api.aucklandmuseum.com/id/media/v/566061?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-31998"><img src="http://api.aucklandmuseum.com/id/media/v/565999?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-32423"><img src="http://api.aucklandmuseum.com/id/media/v/566577?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-32429"><img src="http://api.aucklandmuseum.com/id/media/v/577905?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-512507"><img src="http://api.aucklandmuseum.com/id/media/v/570929?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-49779"><img src="http://api.aucklandmuseum.com/id/media/v/566582?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-512505"><img src="http://api.aucklandmuseum.com/id/media/v/567722?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524696"><img src="http://api.aucklandmuseum.com/id/media/v/566529?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524627"><img src="http://api.aucklandmuseum.com/id/media/v/574763?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-575887"><img src="http://api.aucklandmuseum.com/id/media/v/574781?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524700"><img src="http://api.aucklandmuseum.com/id/media/v/577920?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524577"><img src="http://api.aucklandmuseum.com/id/media/v/574710?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-80981"><img src="http://api.aucklandmuseum.com/id/media/v/488219?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524461"><img src="http://api.aucklandmuseum.com/id/media/v/574757?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524530"><img src="http://api.aucklandmuseum.com/id/media/v/571032?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-633887"><img src="http://api.aucklandmuseum.com/id/media/v/509218?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-615249"><img src="http://api.aucklandmuseum.com/id/media/v/574491?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-560608"><img src="http://api.aucklandmuseum.com/id/media/v/571046?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-634011"><img src="http://api.aucklandmuseum.com/id/media/v/570951?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524509"><img src="http://api.aucklandmuseum.com/id/media/v/566767?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524581"><img src="http://api.aucklandmuseum.com/id/media/v/570991?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524606"><img src="http://api.aucklandmuseum.com/id/media/v/567752?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-91276"><img src="http://api.aucklandmuseum.com/id/media/v/570665?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-96123"><img src="http://api.aucklandmuseum.com/id/media/v/571004?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-73991"><img src="http://api.aucklandmuseum.com/id/media/v/574526?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524613"><img src="http://api.aucklandmuseum.com/id/media/v/566626?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524620"><img src="http://api.aucklandmuseum.com/id/media/v/577915?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524693"><img src="http://api.aucklandmuseum.com/id/media/v/574831?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524699"><img src="http://api.aucklandmuseum.com/id/media/v/577576?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-615247"><img src="http://api.aucklandmuseum.com/id/media/v/574484?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-615258"><img src="http://api.aucklandmuseum.com/id/media/v/571158?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-524691"><img src="http://api.aucklandmuseum.com/id/media/v/574822?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-622368"><img src="http://api.aucklandmuseum.com/id/media/v/567809?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-512210"><img src="http://api.aucklandmuseum.com/id/media/v/566724?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-576948"><img src="http://api.aucklandmuseum.com/id/media/v/577733?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-577301"><img src="http://api.aucklandmuseum.com/id/media/v/566001?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-512544"><img src="http://api.aucklandmuseum.com/id/media/v/566602?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-512533"><img src="http://api.aucklandmuseum.com/id/media/v/574747?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-579073"><img src="http://api.aucklandmuseum.com/id/media/v/570649?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-26757"><img src="http://api.aucklandmuseum.com/id/media/v/566058?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-101865"><img src="http://api.aucklandmuseum.com/id/media/v/574810?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-29831"><img src="http://api.aucklandmuseum.com/id/media/v/566570?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-29833"><img src="http://api.aucklandmuseum.com/id/media/v/565994?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-31986"><img src="http://api.aucklandmuseum.com/id/media/v/565997?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-31993"><img src="http://api.aucklandmuseum.com/id/media/v/565998?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-32431"><img src="http://api.aucklandmuseum.com/id/media/v/567715?rendering=standard.jpg"></a>
-    <a href="http://www.aucklandmuseum.com/collections-research/collections/record/am_humanhistory-object-823119"><img src="http://api.aucklandmuseum.com/id/media/v/567764?rendering=standard.jpg"></a>
+    <a img src="http://api.aucklandmuseum.com/id/media/v/565222?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576192?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576216?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576196?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576212?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576244?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576200?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572936?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/575976?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573632?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576228?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576282?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573638?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573335?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576186?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576272?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572845?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576274?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576280?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576240?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/562281?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576174?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576172?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576188?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576242?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576258?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573578?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573399?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573430?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572918?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576204?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576270?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576246?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576264?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576234?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576184?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576150?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576208?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576232?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576194?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576230?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576206?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572896?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576238?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576268?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572947?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576262?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576190?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576250?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576252?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573640?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576202?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576260?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576210?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572952?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/562260?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/386889?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573343?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576376?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/565230?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576464?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573630?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/575978?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/565218?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576154?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/562263?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573329?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576072?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/572983?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/565274?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/49233?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/575994?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/576100?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573245?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/579129?rendering=standard.jpg"></a>
+<a img src="http://api.aucklandmuseum.com/id/media/v/573251?rendering=standard.jpg"></a>
+
   </div>
 </div>
   
