--- a/Hawaii/index.html
+++ b/Hawaii/index.html
@@ -16,82 +16,89 @@
 
   <div class="row">
   <div class="column">
-    <a img src="http://api.aucklandmuseum.com/id/media/v/565222?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576192?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576216?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576196?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576212?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576244?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576200?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572936?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/575976?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573632?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576228?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576282?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573638?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573335?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576186?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576272?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572845?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576274?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576280?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576240?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/562281?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576174?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576172?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576188?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576242?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576258?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573578?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573399?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573430?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572918?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576204?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576270?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576246?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576264?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576234?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576184?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576150?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576208?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576232?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576194?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576230?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576206?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572896?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576238?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576268?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572947?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576262?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576190?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576250?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576252?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573640?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576202?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576260?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576210?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572952?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/562260?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/386889?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573343?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576376?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/565230?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576464?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573630?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/575978?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/565218?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576154?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/562263?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573329?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576072?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/572983?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/565274?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/49233?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/575994?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/576100?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573245?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/579129?rendering=standard.jpg"></a>
-<a img src="http://api.aucklandmuseum.com/id/media/v/573251?rendering=standard.jpg"></a>
+<img src="http://api.aucklandmuseum.com/id/media/v/565222?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576192?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576216?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576196?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576212?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576244?rendering=standard.jpg">
+    </div>
+    <div class="column">
+    <img src="http://api.aucklandmuseum.com/id/media/v/576200?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/572936?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/575976?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573632?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576228?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576282?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573638?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573335?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576186?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576272?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/572845?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576274?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576280?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576240?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/562281?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576174?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576172?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576188?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576242?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576258?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573578?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573399?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573430?rendering=standard.jpg">
+    </div>
+    <div class="column">
+      <img src="http://api.aucklandmuseum.com/id/media/v/572918?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576204?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576270?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576246?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576264?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576234?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576184?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576150?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576208?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576232?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576194?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576230?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576206?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/572896?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576238?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576268?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/572947?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576262?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576190?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576250?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576252?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573640?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576202?rendering=standard.jpg">
+    </div>
+    <div class="column">
+      <img src="http://api.aucklandmuseum.com/id/media/v/576260?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576210?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/572952?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/562260?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/386889?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573343?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576376?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/565230?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576464?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573630?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/575978?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/565218?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576154?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/562263?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573329?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576072?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/572983?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/565274?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/49233?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/575994?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/576100?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573245?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/579129?rendering=standard.jpg">
+<img src="http://api.aucklandmuseum.com/id/media/v/573251?rendering=standard.jpg">
+
 
   </div>
 </div>
