--- a/wragge/index.html
+++ b/wragge/index.html
@@ -351,7 +351,7 @@
 <li><a href="	http://www.aucklandmuseum.com/collections-research/collections/record/am_library-photography-235769	" class="overlay-container" data-overlay-text="	Kismet and shoemaker, Darjeeling	"><img src="	http://api.aucklandmuseum.com/id/media/p/2f8250645c626800ec7bb4ac6bbfaa2c9b915bb9?rendering=standard.jpg	"alt="	caption	"class="lazyload blur-up" /></a></li>		
 <li><a href="	http://www.aucklandmuseum.com/collections-research/collections/record/am_library-photography-235770	" class="overlay-container" data-overlay-text="	Kismet and shoemaker, Darjeeling	"><img src="	http://api.aucklandmuseum.com/id/media/p/e9c8127a89d4262a4ab59e20c81448209662a04a?rendering=standard.jpg	"alt="	caption	"class="lazyload blur-up" /></a></li>		
 <li><a href="	http://www.aucklandmuseum.com/collections-research/collections/record/am_library-photography-235729	" class="overlay-container" data-overlay-text="	[Drawing of House of a Merchant in Canton]	"><img src="	http://api.aucklandmuseum.com/id/media/p/4de91f9d39084e820cf385162ef2c0395568297f?rendering=standard.jpg	"alt="	caption	"class="lazyload blur-up" /></a></li>		
-
+<script src="http://afarkas.github.io/lazysizes/lazysizes.min.js" async=""></script>
 </li>
   </ul>
 </div>
