--- a/awmm/index.html
+++ b/awmm/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{title}</title>
-  <meta name="description" content="{description}">
+  <title>AWMM</title>
+  <meta name="description" content="Explore the Museum’s collections across time and space.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:image" content="https://amnh-sciviz.github.io/collectionscope/img/amnh_collectionscope.jpg" />
@@ -23,9 +23,9 @@
     <div class="intro active">
       <div>
 
-        <h1>{titleFormatted}</h1>
-        <h2>{description}</h2>
-        <p>{introductionText}</p>
+        <h1>Collection<strong>scope</strong> Demo</h1>
+        <h2>Explore the Museum’s collections across time and space.</h2>
+        <p>Let’s explore.</p>
 
         <div class="loading">
           <div class="loading-circle"></div>
@@ -46,7 +46,8 @@
 
         <div class="story-buttons"></div>
 
-        {footerContent}
+        <div class="intro-footer"><div class="credits"><a href="https://amnh.org/" target="_blank"><img src="../../img/amnh_logo.png" alt="American Museum of Natural History" /></a><a href="https://knightfoundation.org/" target="_blank"><img src="../../img/knight_logo.png" alt="Knight Foundation" /></a></div>
+<p>The <a href="https://amnh-sciviz.github.io/collectionscope/" target="_blank">CollectionScope Tool</a> is a part of the Knight Foundation's <a href="https://knightfoundation.org/press/releases/shaping-the-future-of-technology-in-museums-knight-invests-750000-in-five-experiments-using-immersive-technology-in-the-arts/" target="_blank">Immersive Technology in the Arts Fund</a></p></div>
 
       </div>
 
