--- a/awmm/viewer.html
+++ b/awmm/viewer.html
@@ -15,15 +15,15 @@
     <div id="viewer-target" class="main loading"></div>
   </div>
 
-  <script src="../../js/vendor/jquery-3.4.1.min.js"></script>
-  <script src="../../js/vendor/underscore-1.9.2.min.js"></script>
-  <script src="../../js/vendor/three-r114.min.js"></script>
-  <script src="../../js/vendor/three-MTLLoader.js"></script>
-  <script src="../../js/vendor/three-OBJLoader.js"></script>
-  <script src="../../js/vendor/three-orbit-controls.js"></script>
-  <script src="../../js/utils/utils.js"></script>
-  <script src="../../js/lib/objViewer.js"></script>
-  <script src="../../js/viewer.js"></script>
+  <script src="../js/vendor/jquery-3.4.1.min.js"></script>
+  <script src="../js/vendor/underscore-1.9.2.min.js"></script>
+  <script src="../js/vendor/three-r114.min.js"></script>
+  <script src="../js/vendor/three-MTLLoader.js"></script>
+  <script src="../js/vendor/three-OBJLoader.js"></script>
+  <script src="../js/vendor/three-orbit-controls.js"></script>
+  <script src="../js/utils/utils.js"></script>
+  <script src="../js/lib/objViewer.js"></script>
+  <script src="../js/viewer.js"></script>
 
 </body>
 </html>
