--- a/xmas.html
+++ b/xmas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum Staff Christmas Countdown</title>
     <style>
-        /* Design Settings */
+        /* This section controls the design (CSS) */
         body {
             background-color: #b3000c; /* Festive Red */
             color: #ffffff;
@@ -20,7 +20,7 @@
         }
 
         h1 {
-            font-size: 5vh;
+            font-size: 5vh; /* Responsive text size */
             margin-bottom: 20px;
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -31,40 +31,26 @@
         .container {
             text-align: center;
             background: rgba(0, 0, 0, 0.2);
-            padding: 30px;
+            padding: 40px;
             border-radius: 20px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-            border: 2px solid #ffd700;
-            width: 80%;
-            max-width: 800px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            border: 2px solid #ffd700; /* Gold border */
         }
 
-        /* Video Styling */
-        .video-container {
-            width: 100%;
-            max-width: 560px; /* Limits video size */
-            aspect-ratio: 16 / 9;
+        /* The GIF styling */
+        .mariah-gif {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
             margin-bottom: 30px;
             border: 4px solid #ffffff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.5);
         }
 
-        iframe {
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Countdown Timer Styling */
+        /* The Countdown Timer Styling */
         #countdown {
             display: flex;
             justify-content: center;
-            gap: 15px;
-            margin-bottom: 10px;
+            gap: 20px;
         }
 
         .time-box {
@@ -74,25 +60,26 @@
         }
 
         .number {
-            font-size: 5vh;
+            font-size: 6vh;
             font-weight: bold;
             background: #fff;
             color: #b3000c;
-            padding: 10px 15px;
+            padding: 10px 20px;
             border-radius: 10px;
-            min-width: 50px;
+            min-width: 60px;
         }
 
         .label {
-            font-size: 1.5vh;
-            margin-top: 8px;
+            font-size: 2vh;
+            margin-top: 10px;
             text-transform: uppercase;
         }
 
+        /* Footer message */
         .footer {
             margin-top: 20px;
             font-size: 2vh;
-            color: #ffd700;
+            color: #ffd700; /* Gold text */
             font-style: italic;
         }
     </style>
@@ -102,15 +89,7 @@
     <div class="container">
         <h1>Time Until Christmas</h1>
         
-        <div class="video-container">
-            <iframe 
-                src="https://www.youtube.com/embed/aAkMkVFwAoo?autoplay=1&loop=1&playlist=aAkMkVFwAoo" 
-                title="Mariah Carey All I Want For Christmas" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-            </iframe>
-        </div>
+        <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExcXp0YzY2bjlkaHQwbHM4aGN6a29teWx2Y3BvajkzaTE1cGxpbGQxZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ABPYR9xUWHPsBH9A6y/giphy.gif" alt="Mariah Carey" class="mariah-gif">
 
         <div id="countdown">
             <div class="time-box">
@@ -131,16 +110,17 @@
             </div>
         </div>
 
-       
+        <p class="footer">🎶 All I Want For Christmas Is You... 🎶</p>
     </div>
 
     <script>
-        // Countdown Logic
+        // This section controls the Logic (JavaScript)
         const daysEl = document.getElementById('days');
         const hoursEl = document.getElementById('hours');
         const minutesEl = document.getElementById('minutes');
         const secondsEl = document.getElementById('seconds');
 
+        // Calculate target date (Dec 25 of the current year)
         const currentYear = new Date().getFullYear();
         const xmasTime = new Date(`December 25, ${currentYear} 00:00:00`).getTime();
 
@@ -148,6 +128,7 @@
             const now = new Date().getTime();
             const gap = xmasTime - now;
 
+            // Math to calculate time units
             const second = 1000;
             const minute = second * 60;
             const hour = minute * 60;
@@ -158,14 +139,16 @@
             const m = Math.floor((gap % hour) / minute);
             const s = Math.floor((gap % minute) / second);
 
+            // Update the HTML
             daysEl.innerText = d;
             hoursEl.innerText = h < 10 ? '0' + h : h;
             minutesEl.innerText = m < 10 ? '0' + m : m;
             secondsEl.innerText = s < 10 ? '0' + s : s;
         }
 
+        // Run the function every second
         setInterval(updateCountdown, 1000);
-        updateCountdown();
+        updateCountdown(); // Run immediately on load
     </script>
 </body>
 </html>
