--- a/xmas.html
+++ b/xmas.html
@@ -87,7 +87,7 @@
 <body>
 
     <div class="container">
-        <h1>Time Until Christmas</h1>
+        <h1>Holiday Countdown</h1>
         
         <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExcXp0YzY2bjlkaHQwbHM4aGN6a29teWx2Y3BvajkzaTE1cGxpbGQxZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ABPYR9xUWHPsBH9A6y/giphy.gif" alt="Mariah Carey" class="mariah-gif">
 
@@ -109,8 +109,6 @@
                 <span class="label">Secs</span>
             </div>
         </div>
-
-        <p class="footer">🎶 All I Want For Christmas Is You... 🎶</p>
     </div>
 
     <script>
