--- a/xmas.html
+++ b/xmas.html
@@ -73,7 +73,7 @@
 
     <div class="container">
         <h1>Happy New Year!</h1>
-        <div class="subtitle">Welcome to <span id="current-year"></span></div>
+        <div class="subtitle">Welcome to 2026 </div>
         
         <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNXJ2NHBvdnJsbXF5dWhiNmNlNDVkMmU5dmFjNDc4cTd3YzR6dDg0bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Bus6HsNdFtpuPpDtcD/giphy.gif" alt="Happy New Year Fireworks" class="nye-gif">
 
